# oop-maxim

Downloads/oop/oop3/: CMakeLists.txt  main.cpp
Downloads/oop/oop3/include/: Figure.h  FiguresManager.h  Polygons.h
Downloads/oop/oop3/src/: Figure.cpp  FiguresManager.cpp  Polygons.cpp
Downloads/oop/oop3/test/: FigureTests.cpp
Downloads/oop/oop4/: main.cpp
Downloads/oop/oop4/include/: Figure.h  FiguresManager.h  Point.h  Polygons.h
Downloads/oop/oop4/src/: FiguresManager.cpp  Polygons.cpp
Downloads/oop/oop4/test/: FigureTests.cpp
Downloads/oop/oop5/: CMakeLists.txt  main.cpp
Downloads/oop/oop5/include/: MemoryResource.h  pmrQueue.h
Downloads/oop/oop5/src/: MemoryResource.cpp  pmrQueue.cpp
Downloads/oop/oop5/test/: pmrQueueTest.cpp
Downloads/oop/oop6/: CMakeLists.txt
Downloads/oop/oop6/include/Manager/: NPCManager.h
Downloads/oop/oop6/include/NPC/: Bull.h  Dragon.h  Frog.h  NPC.h
Downloads/oop/oop6/include/Observer/: ConsoleLogger.h  FileLogger.h
Downloads/oop/oop6/include/Subject/: Subject.h
Downloads/oop/oop6/include/Visitor/: BattleVisitor.h
Downloads/oop/oop6/src/: main.cpp
Downloads/oop/oop6/src/Factory/: NPCFactory.cpp
Downloads/oop/oop6/src/Manager/: NPCManager.cpp  PersistenceManager.cpp
Downloads/oop/oop6/src/NPC/: Bull.cpp  Dragon.cpp  Frog.cpp  NPC.cpp
Downloads/oop/oop6/src/Observer/: ConsoleLogger.cpp
Downloads/oop/oop6/src/Visitor/: BattleVisitor.cpp
Downloads/oop/oop6/test/: CMakeLists.txt  NPCManagerTest.cpp
Downloads/oop/oop7/: BalagurFate3Editor  CMakeLists.txt
Downloads/oop/oop7/include/Controller/: GameEngine.h
Downloads/oop/oop7/include/Factory/: NPCFactory.h
Downloads/oop/oop7/include/Manager/: NPCManager.h  PersistenceManager.h
Downloads/oop/oop7/include/NPC/: Bull.h  Dragon.h  Frog.h  NPC.h
Downloads/oop/oop7/include/Observer/: ConsoleLogger.h  IObserver.h
Downloads/oop/oop7/include/Visitor/: BattleVisitor.h  IVisitor.h
Downloads/oop/oop7/src/: main.cpp
Downloads/oop/oop7/src/Controller/: GameEngine.cpp
Downloads/oop/oop7/src/Manager/: NPCManager.cpp  PersistenceManager.cpp
Downloads/oop/oop7/src/NPC/: Bull.cpp  Dragon.cpp  Frog.cpp  NPC.cpp
Downloads/oop/oop7/src/Observer/: ConsoleLogger.cpp  FileLogger.cpp
Downloads/oop/oop7/src/Subject/: Subject.cpp
Downloads/oop/oop7/src/Visitor/: BattleVisitor.cpp
